sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:14: error: ')' expected but ',' found.
    for (i<- fin to debut by -1, j<-debut to i-1) {
                               ^AlgCocktailSort2:21: error: illegal start of simple expression
  } while (!inversion);
  ^